testdata/good/before/comp-and-passes/user.tw
<section>
    <p>@slot</p>
    <div>@component('small')@end</div>
    <main>@slot("name")</main>
    <strong>@slot("age")</strong>
    <span>@slot("empty")</span>
</section>