testdata/bad/undefined-named-passif/index.tw
<p>@component('user')@passif(true, 'name')TEST@end@end</p>